[package]
name = "some_yt_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_ytdl = "0.7.4"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
url = "2.5.3"
serde = "1.0.214"
serde_json = "1.0.132"

